alpm-types/src/relation/snapshots/composite::invalid_sonamev2_parser@case_1.snap
---
source: alpm-types/src/relation/composite.rs
---
error: invalid shared library prefix delimiter
 | 
 | libexample.so.1
 |                ^ expected shared library prefix `:`
